src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


body {
  margin: 0;
  font-family: 'Baskervville SC', serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
/* src/index.css or src/global.css */

body {
  position: relative; /* Needed for the ::before pseudo-element */
  /* background-image: url('https://images.pexels.com/photos/2387793/pexels-photo-2387793.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); */
  /* background-color: #0C0404; */


}

/* body::before {
  content: "";
  background-color: rgba(0, 0, 0, 0.8); 
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: -1; 
} */

  

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

 footer {
  background-color: #7f7f7f12;
}

.card:hover {
  transform: scale(1.05);
  transition: transform 0.3s ease, box-shadow 0.3s ease;
}



.flip-card {
  background-color: transparent;

  perspective: 1000px; /* Remove if the effect is too strong */
  border-radius: 0.5rem;

}

.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  margin: auto;
  border-radius: 0.5rem;
  text-align: center;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

.flip-card:hover .flip-card-inner,
.flip-card:active .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front,
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
}



.flip-card-back {
  color: white;
  transform: rotateY(180deg);
}

/* Hide scrollbar for Chrome, Safari, and Opera */
.hidebar::-webkit-scrollbar {
  display: none;
}

body::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge, and Firefox */
.hidebar {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;     /* Firefox */
}

/* In your global CSS file or a <style> block */
.min-h-minus {
  min-height: calc(100vh - 145px);
  
}

